# fg2-fdim-surrogate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FdmKeypadStatus.h  README.md  libopencm3.py  sketch_feb12a.ino
Fdm/: CMakeLists.txt  README.md
Fdm/cmake/toolchain/: avr.toolchain.cmake
Fdm/src/: FdmKepadStatup.cpp  main.cpp
ICC/: CMakeLists.txt
ICC/cmake/: gcc-arm-none-eabi.cmake
ICC/cmake/toolchain/: avr.toolchain.cmake
ICC/src/: Buttons.h  FdmKeypadStatus.h  HvacStatus.h  IccKeepAlive.h  Registers.h  Timer.h  main.cpp
cmake/: libopencm3.cmake  opencm3_utils.cmake  stm32f412.cmake
docs/: RaiseGMProtocol.md
resources/: RaiseVolkswagenProtocol.md
src/: Main.cpp  Main.h
src/ACM/: KeepAlive.h
src/Acm/: KeepAlive.cpp  KeepAlive.h
src/Core/: BitFieldMember.h  BitPack.h  Can.cpp  Can.h  Serial.cpp  Serial.h  Timer.cpp  Timer.h
src/FoMoCo/MsCan/: Packets.h
src/Icc/: KeepAlive.cpp  KeepAlive.h
src/Keypad/: Arbitration.h  Buttons.h  CabinTempSensor.cpp  CabinTempSensor.h  HvacControlState.cpp  HvacControlState.h  HvacStatus.cpp  HvacStatus.h  KeypadState.cpp  KeypadState.h  KeypadStatus.cpp  KeypadStatus.h  MediaControlState.cpp  MediaControlState.h  Pins.h  RotaryDial.cpp  RotaryDial.h
src/SZRaize/GM/: Universal.cpp  Universal.h
